--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@ crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <header>MY DEVELOPER SKILLS</header>
+    <main>
+        <div class="skill"></div>
+        <input type="text">
+        <button>ADD SKILL</button>
+    </main>
 </body>
 </html>
