--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@ crossorigin="anonymous"></script>
 <body>
     <header>MY DEVELOPER SKILLS</header>
     <main>
-        <div class="skill"></div>
+        <div class="skill">
+            <button>X</button> Cascading Style Sheets (CSS)
+        </div>
+        <div class="skill">
+            <button>X</button> Hypertext Markup Language (HTML)
+        </div>
         <input type="text">
         <button>ADD SKILL</button>
     </main>
