--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="js/main.js">
-    <link type="stylesheet" href="main/main.css"></link>
+    <link href="css/main.css" rel="stylesheet">
     <script
 src="https://code.jquery.com/jquery-3.3.1.min.js"
 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -12,7 +12,7 @@ crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    <header>MY DEVELOPER SKILLS</header>
+    <h1>MY DEVELOPER SKILLS</h1>
     <main>
         <div class="skill">
             <button>X</button> Cascading Style Sheets (CSS)
