--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="js/main.js">
-    <link href="css/main.css" rel="stylesheet">
+    <script defer src="js/main.js"></script>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
     <script
 src="https://code.jquery.com/jquery-3.3.1.min.js"
 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -20,8 +20,10 @@ crossorigin="anonymous"></script>
         <div class="skill">
             <button>X</button> Hypertext Markup Language (HTML)
         </div>
+        <div id="addSkillDiv">
         <input type="text">
-        <button>ADD SKILL</button>
+        <button id="addSkill">ADD SKILL</button>
+        </div>
     </main>
 </body>
 </html>
