fixed css, more js work

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@ crossorigin="anonymous"></script>
 <body>
     <h1>MY DEVELOPER SKILLS</h1>
     <main>
-        <div class="skill">
-            <button>X</button> Cascading Style Sheets (CSS)
-        </div>
-        <div class="skill">
-            <button>X</button> Hypertext Markup Language (HTML)
+        <div id="skills">
+            <div class="startSkill">
+                <button>X</button> Cascading Style Sheets (CSS)
+                <button>X</button> Hypertext Markup Language (HTML)
+            </div>
         </div>
         <div id="addSkillDiv">
-        <input type="text">
+        </div>
+        <input type="text" id="skillInput">
         <button id="addSkill">ADD SKILL</button>
         </div>
     </main>
