--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@ crossorigin="anonymous"></script>
 <body>
     <h1>MY DEVELOPER SKILLS</h1>
     <main>
-        <div id="skills">
-            <div class="startSkill">
-                <button>X</button> Cascading Style Sheets (CSS)
-                <button>X</button> Hypertext Markup Language (HTML)
-            </div>
-        </div>
+        <table id="skills">
+            <tbody>
+                <tr class="startSkill">
+                    <td><button class="removeSkill">X</button> Cascading Style Sheets (CSS)</td>
+                </tr>
+                <tr class="startSkill">
+                    <td><button class="removeSkill">X</button> Hypertext Markup Language (HTML)</td>
+                </tr>
+            </tbody>
+        </table>
         <div id="addSkillDiv">
         </div>
         <input type="text" id="skillInput">
